test/sematest/valid/comparisons.java
class A {
  public static void main(String[] args) {
    boolean a = 4 * 5 >= 5;
    if (a){
      A obj = new A();
      boolean bla = obj == obj;
    }
    return;
  }
}