test/sematest/invalid/return2.java
class A {
  public static void main(String[] args) {

  }

  public void bla(A a){
    return a;
  }
}